--- a/services/users/Pipfile
+++ b/services/users/Pipfile
@@ -14,6 +14,12 @@ flask-testing = "*"
 marshmallow = "==3.2.2"
 flask-marshmallow = "==0.10.1"
 marshmallow-sqlalchemy = "==0.19.0"
+coverage = "==4.5.4"
+flake8 = "==3.7.9"
+black = "==19.10b0"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
