--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,20 @@ services:
       - 80:80
     depends_on:
       - supplyit-users
+      - client
+
+  client:
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile
+    volumes:
+      - './services/client:/usr/src/app'
+      - '/usr/src/app/node_modules'
+    ports:
+      - 3007:3000
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - supplyit-users
