--- a/services/users/Pipfile
+++ b/services/users/Pipfile
@@ -19,6 +19,7 @@ flake8 = "==3.7.9"
 black = "==19.10b0"
 flask-debugtoolbar = "==0.10.1"
 flask-cors = "==3.0.8"
+flask-migrate = "==2.5.2"
 
 [requires]
 python_version = "3.7"
