--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -20,8 +20,8 @@ services:
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
-    ports:
-      - 5435:5432
+    expose:
+      - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -37,7 +37,7 @@ services:
     ports:
       - '3007:80'
     depends_on:
-      - users
+      - supplyit-users
 
   nginx:
     build:
