--- a/services/users/Pipfile
+++ b/services/users/Pipfile
@@ -22,6 +22,7 @@ flask-cors = "==3.0.8"
 flask-migrate = "==2.5.2"
 flask-bcrypt = "==0.7.1"
 pyjwt = "==1.7.1"
+gunicorn = "==20.0.2"
 
 [requires]
 python_version = "3.7"
