--- a/services/nginx/dev.conf
+++ b/services/nginx/dev.conf
@@ -15,8 +15,8 @@ server {
 
   location /users {
     proxy_pass        http://supplyit-users:5000;
-    proxy_redirect    default;
     proxy_http_version 1.1;
+    proxy_redirect    default;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header  Host $host;
@@ -27,8 +27,11 @@ server {
 
   location /auth {
     proxy_pass        http://supplyit-users:5000;
+    proxy_http_version 1.1;
     proxy_redirect    default;
     proxy_set_header  Host $host;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
     proxy_set_header  X-Real-IP $remote_addr;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Host $server_name;
