--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ services:
 env:
   DOCKER_COMPOSE_VERSION: 1.23.2
 
+addons:
+  apt:
+    packages:
+    - libgconf-2-4
+
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
