--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -35,8 +35,8 @@ services:
       args:
         - NODE_ENV=production
         - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-    ports:
-      - '3007:80'
+    expose:
+      - 80
     depends_on:
       - supplyit-users
 
@@ -50,3 +50,14 @@ services:
     depends_on:
       - supplyit-users
       - client
+
+  swagger:
+    build:
+      context: ./services/swagger
+      dockerfile: Dockerfile
+    expose:
+      - 8080
+    environment:
+      - URL=swagger.json
+    depends_on:
+      - supplyit-users
