--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,3 +55,16 @@ services:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
       - supplyit-users
+
+  swagger:
+    build:
+      context: ./services/swagger
+      dockerfile: Dockerfile
+    volumes:
+      - './services/swagger/swagger.json:/usr/share/nginx/html/swagger.json'
+    ports:
+      - 3008:8080
+    environment:
+      - URL=swagger.json
+    depends_on:
+      - supplyit-users
