--- a/services/nginx/prod.conf
+++ b/services/nginx/prod.conf
@@ -4,7 +4,7 @@ server {
 
   location / {
     proxy_pass http://client:80;
-    proxy_http_version 1.1;
+      proxy_http_version 1.1;
     proxy_redirect    default;
     proxy_set_header  Upgrade $http_upgrade;
     proxy_set_header  Connection "upgrade";
@@ -16,7 +16,7 @@ server {
 
   location /users {
     proxy_pass        http://supplyit-users:5000;
-    proxy_http_version 1.1;
+      proxy_http_version 1.1;
     proxy_redirect    default;
     proxy_set_header  Upgrade $http_upgrade;
     proxy_set_header  Connection "upgrade";
@@ -28,7 +28,19 @@ server {
 
   location /auth {
     proxy_pass        http://supplyit-users:5000;
-    proxy_http_version 1.1;
+      proxy_http_version 1.1;
+    proxy_redirect    default;
+    proxy_set_header  Upgrade $http_upgrade;
+    proxy_set_header  Connection "upgrade";
+    proxy_set_header  Host $host;
+    proxy_set_header  X-Real-IP $remote_addr;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Forwarded-Host $server_name;
+  }
+
+  location /swagger {
+    proxy_pass        http://swagger:8080;
+      proxy_http_version 1.1;
     proxy_redirect    default;
     proxy_set_header  Upgrade $http_upgrade;
     proxy_set_header  Connection "upgrade";
