--- a/services/client/Dockerfile-prod
+++ b/services/client/Dockerfile-prod
@@ -13,6 +13,8 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 COPY package-lock.json /usr/src/app/package-lock.json
 RUN npm ci
+# To handle 'not get uid/gid'
+RUN npm config set unsafe-perm true
 RUN npm install react-scripts@2.1.8 -g --silent
 
 # set environment variables
