Remove entrypoint from prod Dockerfile

--- a/services/users/Dockerfile-prod
+++ b/services/users/Dockerfile-prod
@@ -19,12 +19,8 @@ RUN pip install pipenv \
 && pipenv lock -r > /usr/src/app/requirements.txt
 RUN pip install -r /usr/src/app/requirements.txt
 
-# add entrypoint-prod.sh
-COPY ./entrypoint-prod.sh /usr/src/app/entrypoint-prod.sh
-RUN chmod +x /usr/src/app/entrypoint-prod.sh
-
 # add app
 COPY . /usr/src/app
 
 # run server
-CMD ["/usr/src/app/entrypoint-prod.sh"]
+CMD gunicorn -b 0.0.0.0:5000 manage:app
