--- a/services/users/Dockerfile-stage
+++ b/services/users/Dockerfile-stage
@@ -19,8 +19,8 @@ RUN pip install pipenv \
 && pipenv lock -r > /usr/src/app/requirements.txt
 RUN pip install -r /usr/src/app/requirements.txt
 
-# add entrypoint-prod.sh
-COPY ./entrypoint-prod.sh /usr/src/app/entrypoint-stage.sh
+# add entrypoint-stage.sh
+COPY ./entrypoint-stage.sh /usr/src/app/entrypoint-stage.sh
 RUN chmod +x /usr/src/app/entrypoint-stage.sh
 
 # add app
