--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -58,6 +58,6 @@ services:
     expose:
       - 8080
     environment:
-      - URL=swagger.json
+      - URL=swagger.yml
     depends_on:
       - supplyit-users
