--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -47,7 +47,7 @@ services:
     expose:
       - 8080
     environment:
-      - URL=swagger.json
+      - URL=swagger.yml
     depends_on:
       - supplyit-users
 
