--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,10 +61,10 @@ services:
       context: ./services/swagger
       dockerfile: Dockerfile
     volumes:
-      - './services/swagger/swagger.json:/usr/share/nginx/html/swagger.json'
+      - './services/swagger/swagger.yml:/usr/share/nginx/html/swagger.yml'
     ports:
       - 3008:8080
     environment:
-      - URL=swagger.json
+      - URL=swagger.yml
     depends_on:
       - supplyit-users
