--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -14,6 +14,7 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@supplyit-users-db:5432/users_stage
       - DATABASE_TEST_URL=postgres://postgres:postgres@supplyit-users-db:5432/users_test
       - SECRET_KEY=my_precious
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
     depends_on:
       - supplyit-users-db
 
