--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
 
   supplyit-users:
+    image: users
     build:
       context: ./services/users
       dockerfile: Dockerfile
@@ -17,8 +18,11 @@ services:
       - DATABASE_TEST_URL=postgres://postgres:postgres@supplyit-users-db:5432/users_test
       - SECRET_KEY=my_precious
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
     depends_on:
       - supplyit-users-db
+      - redis
 
   supplyit-users-db:
     build:
@@ -69,3 +73,27 @@ services:
       - URL=swagger.yml
     depends_on:
       - supplyit-users
+
+  celery:
+    image: users
+    volumes:
+      - './services/users:/usr/src/app'
+    command: celery -A tasks worker --loglevel=info
+    environment:
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
+    depends_on:
+      - supplyit-users
+      - redis
+
+  celery-monitor:
+    image: users
+    ports:
+      - 5555:5555
+    command:  flower -A tasks --port=5555 --broker=redis://redis:6379/0
+    depends_on:
+      - supplyit-users
+      - redis
+
+  redis:
+    image: redis:5.0.7-alpine
