--- a/services/users/Pipfile
+++ b/services/users/Pipfile
@@ -21,6 +21,9 @@ flask-bcrypt = "==0.7.1"
 pyjwt = "==1.7.1"
 gunicorn = "==20.0.2"
 requests = "*"
+celery = "*"
+flower = "*"
+tornado  = ">=4.2.0,<6.0.0"
 
 [requires]
 python_version = "3.7"
