--- a/services/client/package.json
+++ b/services/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.25.0",
