--- a/services/client/package.json
+++ b/services/client/package.json
@@ -6,12 +6,12 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
