celery and celery monitor on dc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,9 @@ services:
     environment:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
+      - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+      - MAILGUN_DOMAIN=${MAILGUN_DOMAIN}
+      - FROM_TITLE=SUPPLYIT
     depends_on:
       - supplyit-users
       - redis
