several aesthetic, minor functional changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - './services/client:/usr/src/app'
-      - '/usr/src/app/node_modules'
+      - './services/client/node_modules:/usr/src/app/node_modules'
     ports:
       - 3007:3000
     environment:
