--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "cypress": "^3.2.0",
     "randomstring": "^1.1.5"
+  },
+  "dependencies": {
+    "mailslurp-client": "^6.7.4"
   }
 }
