--- a/services/client/Dockerfile
+++ b/services/client/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:11.12.0-alpine
+# pull official base image
+FROM node:13.5.0-alpine
 
 # set working directory
 WORKDIR /usr/src/app
@@ -9,17 +10,8 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY package.json /usr/src/app/package.json
 COPY package-lock.json /usr/src/app/package-lock.json
-RUN apk add --no-cache --virtual .gyp \
-        python \
-        make \
-        g++
-
 RUN npm ci
-# To handle 'not get uid/gid'
-RUN npm config set unsafe-perm true
-RUN npm install react-scripts@2.1.8 -g --silent
-
-RUN apk del .gyp
+RUN npm install react-scripts@3.3.0 -g --silent
 
 # start app
 CMD ["npm", "start"]
