--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "axios": "^0.18.1",
-    "bootstrap": "^4.4.1",
-    "material-table": "^1.56.1",
-    "react": "^16.8.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.8.0",
-    "react-router-bootstrap": "^0.25.0",
+    "axios": "^0.18.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "@material-ui/core": "^4.9.5",
+    "material-table": "^1.56.1",
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-router-bootstrap": "^0.25.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "^3.3.0",
     "react-scroll-up-button": "^1.6.4",
     "styled-components": "^5.0.0"
   },
@@ -41,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2"
   }
 }
