adding new services to staging

--- a/services/users/Dockerfile-stage
+++ b/services/users/Dockerfile-stage
@@ -18,6 +18,7 @@ COPY ./Pipfile.lock /usr/src/app
 RUN pip install pipenv \
 && pipenv lock -r > /usr/src/app/requirements.txt
 RUN pip install -r /usr/src/app/requirements.txt
+RUN pip install "celery[redis]"
 
 # add entrypoint-prod.sh
 COPY ./entrypoint-prod.sh /usr/src/app/entrypoint-stage.sh
