--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -15,8 +15,11 @@ services:
       - DATABASE_TEST_URL=postgres://postgres:postgres@supplyit-users-db:5432/users_test
       - SECRET_KEY=my_precious
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
     depends_on:
       - supplyit-users-db
+      - redis
 
   supplyit-users-db:
     build:
@@ -62,3 +65,28 @@ services:
     depends_on:
       - supplyit-users
       - client
+
+  celery:
+    image: users
+    command: celery -A project.utils.tasks worker --loglevel=info
+    environment:
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
+      - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+      - MAILGUN_DOMAIN=${MAILGUN_DOMAIN}
+      - FROM_TITLE=SUPPLYIT
+    depends_on:
+      - supplyit-users
+      - redis
+
+  celery-monitor:
+    image: users
+    expose:
+      - 5555
+    command:  flower -A project.utils.tasks --port=5555 --broker=redis://redis:6379/0
+    depends_on:
+      - supplyit-users
+      - redis
+
+  redis:
+    image: redis:5.0.7-alpine
