--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -82,8 +82,8 @@ services:
 
   celery-monitor:
     image: users
-    expose:
-      - 5555
+    ports:
+      - 5555:5555
     command:  flower -A project.utils.tasks --port=5555 --broker=redis://redis:6379/0
     depends_on:
       - supplyit-users
