--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -90,4 +90,6 @@ services:
       - redis
 
   redis:
-    image: redis:5.0.7-alpine
+    build:
+      context: ./services/redis
+      dockerfile: Dockerfile
