--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,8 +15,11 @@ services:
       - DATABASE_TEST_URL=postgres://postgres:postgres@supplyit-users-db:5432/users_test
       - SECRET_KEY=${SECRET_KEY}
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
     depends_on:
       - supplyit-users-db
+      - redis
 
   supplyit-users-db:
     build:
@@ -41,6 +44,17 @@ services:
     depends_on:
       - supplyit-users
 
+  swagger:
+    build:
+      context: ./services/swagger
+      dockerfile: Dockerfile
+    expose:
+      - 8080
+    environment:
+      - URL=swagger.yml
+    depends_on:
+      - supplyit-users
+
   nginx:
     build:
       context: ./services/nginx
@@ -52,13 +66,29 @@ services:
       - supplyit-users
       - client
 
-  swagger:
-    build:
-      context: ./services/swagger
-      dockerfile: Dockerfile
-    expose:
-      - 8080
+  celery:
+    image: users
+    command: celery -A project.utils.tasks worker --loglevel=info
     environment:
-      - URL=swagger.yml
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_BACKEND=redis://redis:6379/0
+      - MAILGUN_API_KEY=${MAILGUN_API_KEY}
+      - MAILGUN_DOMAIN=${MAILGUN_DOMAIN}
+      - FROM_TITLE=SUPPLYIT
     depends_on:
       - supplyit-users
+      - redis
+
+  celery-monitor:
+    image: users
+    ports:
+      - 5555:5555
+    command:  flower -A project.utils.tasks --port=5555 --broker=redis://redis:6379/0
+    depends_on:
+      - supplyit-users
+      - redis
+
+  redis:
+    build:
+      context: ./services/redis
+      dockerfile: Dockerfile
