--- a/services/products/Pipfile
+++ b/services/products/Pipfile
@@ -18,6 +18,7 @@ Flask-Migrate = "==2.5.2"
 Flask-RESTful = "*"
 Flask-SQLAlchemy = "*"
 Flask-Testing = "*"
+black = "==19.10b0"
 
 [requires]
 python_version = "3.7"
