--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
     "@material-ui/core": "^4.9.5",
-    "material-table": "^1.56.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-router-bootstrap": "^0.25.0",
+    "formik": "^2.1.4",
+    "material-table": "^1.56.1",
+    "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
+    "react-scripts": "3.2.0",
     "react-scroll-up-button": "^1.6.4",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
