--- a/services/client/package.json
+++ b/services/client/package.json
@@ -8,10 +8,10 @@
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "material-table": "^1.56.1",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
@@ -43,7 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.5.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2"
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest-environment-jsdom-sixteen": "^1.0.3"
   }
 }
